Final Front End Static

--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ html {
   outline: unset;
 }
 
+.header-btn:active {
+  text-shadow: 1px 1px 2px grey;
+}
+
 .add {
   padding: 16px;
 }
@@ -107,4 +111,29 @@ html {
   background: unset;
   border: unset;
   outline: unset;
+}
+
+.todos {
+  display: flex;
+  flex-direction: column;
+}
+
+.todo {
+  position: relative;
+
+  flex: 1 0 auto;
+  text-align: center;
+
+  min-height: 34px;
+  margin: 16px 0 0;
+  font-family: "Homemade Apple", sans-serif;
+  font-size: 24px;
+
+  border-bottom: 1px solid var(--main-red-color);
+}
+
+.todo-text {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
 }
